--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -22,12 +22,11 @@ jobs:
       run: |
         set -xe
 
-        mkdir -p src
-        wget -O master.tar.gz \
-          https://github.com/NVIDIA/gpu-driver-container/tarball/master
-
-        tar xzf master.tar.gz --strip-components=1 -C src/
-        cd src/fedora
+        mkdir -p driver
+        wget -O driver.tar.gz \
+          https://gitlab.com/container-toolkit-fcos/driver/-/archive/fedora-rebased-main/driver-fedora-rebased-main.tar.gz
+        tar xzf driver.tar.gz --strip-components=1 -C driver/
+        cd driver/fedora
 
         TARGETARCH=amd64
         DRIVER_VERSION=565.77
