--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -22,8 +22,6 @@ jobs:
       run: |
         set -xe
 
-        sleep infinity
-
         TARGETARCH=amd64
         DRIVER_VERSION=565.77
         KERNEL_TYPE=kernel-open
@@ -35,7 +33,7 @@ jobs:
           https://gitlab.com/container-toolkit-fcos/driver/-/archive/$BRANCH/driver-$BRANCH.tar.gz
         tar xzf driver.tar.gz --strip-components=2 driver-$BRANCH/fedora -C .
 
-        cat > /kaniko/.docker/config.json <<EOF
+        cat > $DOCKER_CONFIG/config.json <<EOF
         {
           "auths": {
             "ghcr.io": {
@@ -44,6 +42,8 @@ jobs:
           }
         }
         EOF
+
+        sleep infinity
 
         /kaniko/executor \
           --dockerfile="./Dockerfile" \
