fix driver base url

--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -24,7 +24,7 @@ jobs:
         DRIVER_VERSION=565.77
         KERNEL_TYPE=kernel-open
         FEDORA_VERSION=41
-        BASE_URL=http://us.download.nvidia.com/XFree86/Linux-x86_64
+        BASE_URL=https://us.download.nvidia.com/XFree86/Linux-x86_64
 
         cat > $DOCKER_CONFIG/config.json <<EOF
         {
