--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -20,9 +20,10 @@ jobs:
     steps:
     - name: Build and release container
       env:
-        DRIVER_VERSION: 565.77
+        DRIVER_VERSION: 570.86.15
         KERNEL_TYPE: kernel-open
         FEDORA_VERSION: 41
+        BASE_URL: https://us.download.nvidia.com/tesla
       run: |
         cat > $DOCKER_CONFIG/config.json <<EOF
         {
@@ -34,15 +35,15 @@ jobs:
         }
         EOF
 
-        BASE_URL=https://us.download.nvidia.com/XFree86/Linux-$(arch)
         TARGETARCH=$(arch)
+        # BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64}
         TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
 
         /kaniko/executor \
           --context-sub-path="fedora" \
           --dockerfile="./Dockerfile" \
           --context="git://gitlab.com/container-toolkit-fcos/driver.git#refs/heads/fedora-rebased-main" \
-          --destination="ghcr.io/${{ github.repository }}:$DRIVER_VERSION-f$FEDORA_VERSION-$TARGETARCH" \
+          --destination="ghcr.io/${{ github.repository }}:$DRIVER_VERSION-fedora$FEDORA_VERSION" \
           --build-arg TARGETARCH=$TARGETARCH \
           --build-arg FEDORA_VERSION=$FEDORA_VERSION \
           --build-arg BASE_URL=$BASE_URL \
