--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -7,10 +7,11 @@ on:
   workflow_dispatch:
 
 env:
-  DRIVER_VERSION: 570.86.15
-  KERNEL_TYPE: kernel-open
+  DRIVER_VERSION: 570.133.07
+  KERNEL_TYPE: kernel
   FEDORA_VERSION: 41
-  BASE_URL: https://us.download.nvidia.com/tesla
+  OPEN_KERNEL_MODULES_ENABLED: false
+  # BASE_URL: https://us.download.nvidia.com/tesla
 
 jobs:
   build:
@@ -21,6 +22,12 @@ jobs:
       contents: read
       packages: write
     steps:
+    - name: Set tag
+      run: |
+        TARGETARCH=$(arch)
+        echo BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64} | tee -a "$GITHUB_ENV"
+        echo TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64} | tee -a "$GITHUB_ENV"
+
     - name: Build and release container
       run: |
         cat > $DOCKER_CONFIG/config.json <<EOF
@@ -32,10 +39,6 @@ jobs:
           }
         }
         EOF
-
-        TARGETARCH=$(arch)
-        # BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64}
-        TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
 
         /kaniko/executor \
           --context-sub-path="fedora" \
