--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -7,11 +7,11 @@ on:
   workflow_dispatch:
 
 env:
-  DRIVER_VERSION: 570.133.07
+  DRIVER_VERSION: 570.124.06
   KERNEL_TYPE: kernel
   FEDORA_VERSION: 41
   OPEN_KERNEL_MODULES_ENABLED: false
-  # BASE_URL: https://us.download.nvidia.com/tesla
+  BASE_URL: https://us.download.nvidia.com/tesla
 
 jobs:
   build:
@@ -25,7 +25,7 @@ jobs:
     - name: Set tag
       run: |
         TARGETARCH=$(arch)
-        echo BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64} | tee -a "$GITHUB_ENV"
+        # echo BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64} | tee -a "$GITHUB_ENV"
         echo TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64} | tee -a "$GITHUB_ENV"
 
     - name: Build and release container
