--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -23,12 +23,6 @@ jobs:
       contents: read
       packages: write
     steps:
-    - name: Set tag
-      run: |
-        TARGETARCH=$(arch)
-        # echo BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64} | tee -a "$GITHUB_ENV"
-        echo TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64} | tee -a "$GITHUB_ENV"
-
     - name: Build and release container
       run: |
         cat > $DOCKER_CONFIG/config.json <<EOF
@@ -40,6 +34,10 @@ jobs:
           }
         }
         EOF
+
+        TARGETARCH=$(arch)
+        # BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64}
+        TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
 
         /kaniko/executor \
           --context-sub-path="fedora" \
