--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -7,12 +7,11 @@ on:
   workflow_dispatch:
 
 env:
+  FEDORA_VERSION: 41
   DRIVER_VERSION: 570.124.06
   KERNEL_TYPE: kernel
-  FEDORA_VERSION: 41
   OPEN_KERNEL_MODULES_ENABLED: false
   BASE_URL: https://us.download.nvidia.com/tesla
-  TAG: fedora-rebased-main-25.01.21
 
 jobs:
   build:
@@ -23,6 +22,19 @@ jobs:
       contents: read
       packages: write
     steps:
+    - name: Set tag
+      run: |
+        TARGETARCH=$(arch)
+        # BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64}
+        TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
+
+        JQ_VERSION=$(wget -O - https://api.github.com/repos/jqlang/jq/releases/latest | grep tag_name | cut -d '"' -f 4 | tr -d 'v')
+        wget -O jq https://github.com/jqlang/jq/releases/download/$JQ_VERSION/jq-linux-$TARGETARCH
+        chmod +x jq
+
+        echo TAG=$(wget -O - https://gitlab.com/api/v4/projects/container-toolkit-fcos%2Fdriver/repository/tags | ./jq -r '.[0] | .name') | tee -a "$GITHUB_ENV"
+        echo TARGETARCH=$TARGETARCH | tee -a "$GITHUB_ENV"
+
     - name: Build and release container
       run: |
         cat > $DOCKER_CONFIG/config.json <<EOF
@@ -35,14 +47,10 @@ jobs:
         }
         EOF
 
-        TARGETARCH=$(arch)
-        # BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64}
-        TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
-
         /kaniko/executor \
           --context-sub-path="fedora" \
           --dockerfile="./Dockerfile" \
-          --context="git://gitlab.com/container-toolkit-fcos/driver.git#refs/heads/$TAG" \
+          --context="git://gitlab.com/container-toolkit-fcos/driver.git#$TAG" \
           --destination="ghcr.io/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION" \
           --build-arg TARGETARCH=$TARGETARCH \
           --build-arg FEDORA_VERSION=$FEDORA_VERSION \
