--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   FEDORA_VERSION: 42
-  DRIVER_VERSION: 570.124.06
+  DRIVER_VERSION: 570.133.07
   KERNEL_TYPE: kernel-open
   BASE_URL: https://us.download.nvidia.com/tesla
 
@@ -24,7 +24,7 @@ jobs:
     - name: Set tag
       run: |
         TARGETARCH=$(arch)
-        # BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64}
+        BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64}
         TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
 
         JQ_VERSION=$(wget -O - https://api.github.com/repos/jqlang/jq/releases/latest | grep tag_name | cut -d '"' -f 4 | tr -d 'v')
