change to type kernel

--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -9,8 +9,8 @@ on:
 env:
   FEDORA_VERSION: 42
   DRIVER_VERSION: 575.57.08
-  KERNEL_TYPE: kernel-open
-  BASE_URL: https://us.download.nvidia.com/tesla
+  KERNEL_TYPE: kernel
+  # BASE_URL: https://us.download.nvidia.com/tesla
 
 jobs:
   build:
