--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -8,8 +8,7 @@ on:
 
 env:
   FEDORA_VERSION: 42
-  DRIVER_VERSION: 575.51.02
-  KERNEL_TYPE: kernel
+  DRIVER_VERSION: 575.57.08
   # BASE_URL: https://us.download.nvidia.com/tesla
 
 jobs:
@@ -53,11 +52,10 @@ jobs:
           --context-sub-path="fedora" \
           --dockerfile="./Dockerfile" \
           --context="git://gitlab.com/container-toolkit-fcos/driver.git#$TAG" \
-          --destination="ghcr.io/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION-$KERNEL_TYPE" \
+          --destination="ghcr.io/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION" \
           --build-arg TARGETARCH=$TARGETARCH \
           --build-arg GOLANG_VERSION=$GOLANG_VERSION \
           --build-arg FEDORA_VERSION=$FEDORA_VERSION \
-          --build-arg BASE_URL=$BASE_URL \
           --build-arg DRIVER_VERSION=$DRIVER_VERSION \
-          --build-arg KERNEL_TYPE=$KERNEL_TYPE \
+          --build-arg BASE_URL=$BASE_URL \
           --push-retry 3
