--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -10,6 +10,7 @@ env:
   FEDORA_VERSION: 42
   DRIVER_VERSION: 570.153.02
   # BASE_URL: https://us.download.nvidia.com/tesla
+  GOLANG_VERSION: 1.24.4
 
 jobs:
   build:
@@ -30,8 +31,8 @@ jobs:
         wget -O jq https://github.com/jqlang/jq/releases/download/$JQ_VERSION/jq-linux-$TARGETARCH
         chmod +x jq
 
-        GOLANG_VERSION=$(wget -O - https://api.github.com/repos/golang/go/git/refs/tags | ./jq -r 'last(.[] | select(.ref | startswith("refs/tags/go"))).ref' | tr -d "refs/tags/go")
-        echo GOLANG_VERSION=$GOLANG_VERSION | tee -a "$GITHUB_ENV"
+        # GOLANG_VERSION=$(wget -O - https://api.github.com/repos/golang/go/git/refs/tags | ./jq -r 'last(.[] | select(.ref | startswith("refs/tags/go"))).ref' | tr -d "refs/tags/go")
+        # echo GOLANG_VERSION=$GOLANG_VERSION | tee -a "$GITHUB_ENV"
 
         echo TAG=$(wget -O - https://gitlab.com/api/v4/projects/container-toolkit-fcos%2Fdriver/repository/tags | ./jq -r 'first(.[] | select(.name | endswith("-fedora"))).name') | tee -a "$GITHUB_ENV"
         echo TARGETARCH=$TARGETARCH | tee -a "$GITHUB_ENV"
