--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -41,33 +41,40 @@ jobs:
     - name: Build and release container
       run: |
         mkdir -p $DOCKER_CONFIG
-        echo -e "$INTERNAL_CA_CERT" > $DOCKER_CONFIG/internal.crt
+        cat > $DOCKER_CONFIG/config.json <<EOF
+        {
+          "auths": {
+            "ghcr.io": {
+              "auth": "$(echo -n ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} | base64 -w0)"
+            }
+          }
+        }
+        EOF
 
         /kaniko/executor \
           --context-sub-path="fedora" \
           --dockerfile="./Dockerfile" \
           --context="git://gitlab.com/container-toolkit-fcos/driver.git#$TAG" \
-          --destination="$INTERNAL_REGISTRY/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION" \
-          --registry-certificate=$INTERNAL_REGISTRY=$DOCKER_CONFIG/internal.crt \
+          --destination="ghcr.io/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION" \
           --build-arg TARGETARCH=$TARGETARCH \
           --build-arg GOLANG_VERSION=$GOLANG_VERSION \
           --build-arg FEDORA_VERSION=$FEDORA_VERSION \
           --build-arg DRIVER_VERSION=$DRIVER_VERSION \
           --build-arg BASE_URL=$BASE_URL \
           --push-retry 3
-  # cleanup:
-  #   needs:
-  #     - build
-  #   runs-on: arc-runner-${{ github.event.repository.name }}
-  #   container:
-  #     image: docker.io/node:current-alpine
-  #   permissions:
-  #     packages: write
-  #   steps:
-  #     - name: Remove old container images
-  #       uses: actions/delete-package-versions@v5
-  #       with:
-  #         package-name: ${{ github.event.repository.name }}
-  #         package-type: container
-  #         min-versions-to-keep: 4
-  #         token: ${{ secrets.GITHUB_TOKEN }}
+  cleanup:
+    needs:
+      - build
+    runs-on: arc-runner-${{ github.event.repository.name }}
+    container:
+      image: docker.io/node:current-alpine
+    permissions:
+      packages: write
+    steps:
+      - name: Remove old container images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ github.event.repository.name }}
+          package-type: container
+          min-versions-to-keep: 4
+          token: ${{ secrets.GITHUB_TOKEN }}
