--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -7,6 +7,9 @@ on:
   push:
     tags:
     - "*"
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
 
 env:
   FEDORA_VERSION: 42
