--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -23,7 +23,6 @@ jobs:
       image: ghcr.io/randomcoww/kaniko:debug
     permissions:
       contents: read
-      packages: write
     steps:
     - name: Set tag
       run: |
@@ -49,31 +48,17 @@ jobs:
           }
         }
         EOF
+        echo -e "$INTERNAL_CA_CERT" > $DOCKER_CONFIG/internal.crt
 
         /kaniko/executor \
           --context-sub-path="fedora" \
           --dockerfile="./Dockerfile" \
           --context="git://gitlab.com/container-toolkit-fcos/driver.git#$TAG" \
-          --destination="ghcr.io/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION" \
+          --destination="$INTERNAL_REGISTRY/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION" \
+          --registry-certificate=$INTERNAL_REGISTRY=$DOCKER_CONFIG/internal.crt \
           --build-arg TARGETARCH=$TARGETARCH \
           --build-arg GOLANG_VERSION=$GOLANG_VERSION \
           --build-arg FEDORA_VERSION=$FEDORA_VERSION \
           --build-arg DRIVER_VERSION=$DRIVER_VERSION \
           --build-arg BASE_URL=$BASE_URL \
           --push-retry 3
-  cleanup:
-    needs:
-      - build
-    runs-on: arc-runner-${{ github.event.repository.name }}
-    container:
-      image: docker.io/node:current-alpine
-    permissions:
-      packages: write
-    steps:
-      - name: Remove old container images
-        uses: actions/delete-package-versions@v5
-        with:
-          package-name: ${{ github.event.repository.name }}
-          package-type: container
-          min-versions-to-keep: 4
-          token: ${{ secrets.GITHUB_TOKEN }}
