--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -4,17 +4,22 @@
 
 name: Image Build
 on:
+  workflow_dispatch:
   push:
     tags:
     - "*"
+  push:
+    paths-ignore:
+    - .github/**
+    - README.md
+    branches:
+    - master
 concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
 
 env:
   FEDORA_VERSION: 42
-  DRIVER_VERSION: ${{ github.head_ref || github.ref_name }}
-  # BASE_URL: https://us.download.nvidia.com/tesla
 
 jobs:
   build:
@@ -33,7 +38,12 @@ jobs:
         GOLANG_VERSION=$(wget -O - https://api.github.com/repos/golang/go/git/refs/tags | jq -r 'last(.[] | select(.ref | startswith("refs/tags/go")) | select(.ref | contains("rc") | not)).ref' | tr -d "refs/tags/go")
         echo GOLANG_VERSION=$GOLANG_VERSION | tee -a "$GITHUB_ENV"
 
-        echo TAG=$(wget -O - https://gitlab.com/api/v4/projects/container-toolkit-fcos%2Fdriver/repository/tags | jq -r 'first(.[] | select(.name | endswith("-fedora"))).name') | tee -a "$GITHUB_ENV"
+        echo BRANCH=$(wget -O - https://gitlab.com/api/v4/projects/container-toolkit-fcos%2Fdriver/repository/tags | jq -r 'first(.[] | select(.name | endswith("-fedora"))).name') | tee -a "$GITHUB_ENV"
+
+        # Use last tag as build version
+        # This allows rebuilding driver without committing a new tag
+        echo DRIVER_VERSION=$(wget -O - https://api.github.com/repos/${{ github.repository }}/git/refs/tags | jq -r 'last(.[]).ref' | sed 's/refs\/tags\///')
+        echo TAG=$(date -u +'%Y%m%d.%H%M') | tee -a "$GITHUB_ENV"
         echo TARGETARCH=$TARGETARCH | tee -a "$GITHUB_ENV"
 
     - name: Build and release container
@@ -53,8 +63,8 @@ jobs:
         /kaniko/executor \
           --context-sub-path="fedora" \
           --dockerfile="./Dockerfile" \
-          --context="git://gitlab.com/container-toolkit-fcos/driver.git#$TAG" \
-          --destination="$INTERNAL_REGISTRY/${{ github.repository }}:v$DRIVER_VERSION-fedora$FEDORA_VERSION" \
+          --context="git://gitlab.com/container-toolkit-fcos/driver.git#$BRANCH" \
+          --destination="$INTERNAL_REGISTRY/${{ github.repository }}:v$DRIVER_VERSION.$TAG-fedora$FEDORA_VERSION" \
           --registry-certificate=$INTERNAL_REGISTRY=$DOCKER_CONFIG/internal.crt \
           --build-arg TARGETARCH=$TARGETARCH \
           --build-arg GOLANG_VERSION=$GOLANG_VERSION \
