--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -14,6 +14,8 @@ concurrency:
 
 env:
   FEDORA_VERSION: 42
+  # https://gitlab.com/container-toolkit-fcos/driver/-/blob/fedora-rebased-main/ci/fedora/.gitlab-ci-fcos.yml
+  GOLANG_VERSION: 1.24.5
 
 jobs:
   build:
@@ -28,10 +30,6 @@ jobs:
         TARGETARCH=$(arch)
         echo BASE_URL=https://us.download.nvidia.com/XFree86/${TARGETARCH/x86_64/Linux-x86_64} | tee -a "$GITHUB_ENV"
         TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
-
-        GOLANG_VERSION=$(wget -O - https://api.github.com/repos/golang/go/git/refs/tags | jq -r 'last(.[] | select(.ref | startswith("refs/tags/go")) | select(.ref | contains("rc") | not)).ref' | tr -d "refs/tags/go")
-        echo GOLANG_VERSION=$GOLANG_VERSION | tee -a "$GITHUB_ENV"
-
         echo BRANCH=$(wget -O - https://gitlab.com/api/v4/projects/container-toolkit-fcos%2Fdriver/repository/tags | jq -r 'first(.[] | select(.name | endswith("-fedora"))).name') | tee -a "$GITHUB_ENV"
 
         # Use last tag as build version
