--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -63,7 +63,13 @@ jobs:
           --build-arg FEDORA_VERSION=$FEDORA_VERSION \
           --build-arg DRIVER_VERSION=$DRIVER_VERSION \
           --build-arg BASE_URL=$BASE_URL \
-          --push-retry 3
+          --use-new-run \
+          --skip-unused-stages \
+          --snapshot-mode=redo \
+          --cleanup \
+          --image-download-retry=4 \
+          --image-fs-extract-retry=4 \
+          --push-retry=4
   cleanup:
     needs:
       - build
@@ -77,10 +83,8 @@ jobs:
       run: |
         set -e
         regctl registry set $INTERNAL_REGISTRY --cacert "$INTERNAL_CA_CERT"
-        tags=$(regctl tag ls $INTERNAL_REGISTRY/${{ github.repository }} | grep -v latest | sort -r)
-
         i=0
-        for tag in $tags; do
+        for tag in $(regctl tag ls $INTERNAL_REGISTRY/${{ github.repository }} --exclude latest | sort -r); do
           if [ "$i" -ge "$TAGS_KEEP" ]; then
             echo "Delete $tag"
             regctl tag delete --ignore-missing $INTERNAL_REGISTRY/${{ github.repository }}:$tag
