--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -11,8 +11,7 @@ concurrency:
 
 env:
   FEDORA_VERSION: 42
-  # https://gitlab.com/container-toolkit-fcos/driver/-/blob/fedora-rebased-main/ci/fedora/.gitlab-ci-fcos.yml
-  GOLANG_VERSION: 1.24.5
+  GOLANG_VERSION: 1.24.5 # https://gitlab.com/container-toolkit-fcos/driver/-/blob/fedora-rebased-main/ci/fedora/.gitlab-ci-fcos.yml
   DRIVER_VERSION: 580.82.09
   FF_KANIKO_SQUASH_STAGES: true # https://github.com/mzihlmann/kaniko/pull/141
 
